--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="student">Öğrenci</string>
     <string name="teacher">Öğretmen</string>
+    <string name="create_document">Doküman Hazırla</string>
 </resources>
